# TinyTroupe

./: .gitignore  README.md  config.ini  pyproject.toml  test_core_with_cache.bat  test_gpt41mini_with_cache.bat  test_with_cache_without_slow.bat  test_without_slow.bat
.github/: copilot-instructions.md
.github/workflows/: all-tests.yml  bandit.yml  core-tests.yml
data/empirical/: 07.17.2025 - Market Research - AI-enabled story telling device or app - Raw Data.csv
data/extractions/: synthetic_data_generation.out.csv
docs/: MultipleLLMProviders
docs/guides/: ollama.md
examples/: AI-enabled Children Story Telling Market Research 2.ipynb  Advertisement for TV.ipynb  Bottled Gazpacho Market Research 5 (with behavior correction).ipynb  Bottled Gazpacho Market Research 5.ipynb  Bottled Gazpacho Market Research 5b.ipynb  Online Advertisement for Travel.ipynb  Product Brainstorming (with behavior correction).ipynb  Product Brainstorming.ipynb  Simple Chat.ipynb  Synthetic Data Generation 1.ipynb  Tendencia de Compra en eComerce Colombia (Spanish).ipynb  Vision for Product, Diagnosis and Appreciation Feedback (image modality).ipynb  Visual Product Evaluation (image modality).ipynb  config.ini
examples/agents/: Paulo_Salem.agent.json
examples/archive/: Bottled Gazpacho Market Research 4b.archival.ipynb  Bottled Gazpacho Market Research 5c.ipynb
examples/ollama/: Simple Chat.ipynb  config.ini
examples/scratch/: config.ini
publications/paper_artifacts_june-2025/: config.ini
publications/paper_artifacts_october-2025/: Brainstorming and Focus Group Quantitative Experimentation 1.ipynb  Brainstorming and Focus Group Quantitative Experimentation 2.1.ipynb  Food Products Ideas Brainstorming.ipynb  config.ini  (+23 more)
tests/: README.md  conftest.py  testing_utils.py
tinytroupe/: __init__.py  config.ini  profiling.py
(+565 files in other folders)
